# VCore

./: CHANGELOG.MD  CLI.MD  CMakeLists.txt  LICENSE.txt  README.md  VEditFormat.md  main.cpp  main.cpp_old
gdnative/: CMakeLists.txt  main.cpp
gdnative/include/: GodotFileStream.hpp  GodotVoxelEditor.hpp  GodotVoxelOptimizer.hpp  Intersection.hpp  MaterialManager.hpp  MeshCache.hpp
gdnative/include/Helpers/: ArrayMeshFactory.hpp  IterateableDictionary.hpp  VectorUtils.hpp
gdnative/include/VCore/: VConfig.hpp
gdnative/lib/: CMakeLists.txt  Checklist.md
gdnative/lib/include/VoxelOptimizer/: BBox.hpp  BinaryStream.hpp  Mat4x4.hpp  Material.hpp  Mesh.hpp  ObjectPool.hpp  Texture.hpp  Vector.hpp  VoxelOptimizer.hpp
gdnative/lib/include/VoxelOptimizer/Exporters/: IExporter.hpp  SpriteStackingExporter.hpp
gdnative/lib/include/VoxelOptimizer/Formats/: IVoxelFormat.hpp  SceneNode.hpp  VEditFormat.hpp
gdnative/lib/include/VoxelOptimizer/Loaders/: ILoader.hpp  MagicaVoxelLoader.hpp  Octree.hpp  VoxelMesh.hpp
gdnative/lib/include/VoxelOptimizer/Math/: Vector.hpp
gdnative/lib/include/VoxelOptimizer/Memory/: Allocator.hpp  MemoryPool.hpp  ObjectPool.hpp
gdnative/lib/include/VoxelOptimizer/Meshers/: GreedyMesher.hpp  IMesher.hpp  MarchingCubesMesher.hpp  MeshBuilder.hpp  SimpleMesher.hpp
gdnative/lib/include/VoxelOptimizer/Meshing/: Color.hpp  IMesher.hpp  Mesh.hpp  MeshBuilder.hpp  VerticesReducer.hpp
gdnative/lib/include/VoxelOptimizer/Misc/: BinaryStream.hpp
gdnative/lib/include/VoxelOptimizer/Voxel/: BBox.hpp  Octree.hpp  PlanesVoxelizer.hpp  VoxelMesh.hpp
gdnative/lib/src/: BinaryStream.hpp  FileUtils.hpp  Texture.cpp
gdnative/lib/src/Export/: IExporter.cpp
gdnative/lib/src/Export/Implementations/: GodotSceneExporter.cpp  PLYExporter.cpp  WavefrontObjExporter.cpp  WavefrontObjExporter.hpp
gdnative/lib/src/Exporters/: IExporter.cpp  SpriteStackingExporter.cpp
gdnative/lib/src/Exporters/glTF/: GLTFExporter.cpp
gdnative/lib/src/Formats/: IVoxelFormat.cpp
gdnative/lib/src/Formats/Implementations/: GoxelFormat.cpp  GoxelFormat.hpp  Kenshape.hpp  KenshapeFormat.cpp  KenshapeFormat.hpp  MagicaVoxelFormat.cpp  MagicaVoxelFormat.hpp  VEditFormat.cpp  VEditFormat.hpp
gdnative/lib/src/Loaders/: ILoader.cpp  MagicaVoxelLoader.cpp  VoxelMesh.cpp
gdnative/lib/src/Meshers/: GreedyMesher.cpp  IMesher.cpp  MarchingCubesMesher.cpp  MeshBuilder.cpp  SimpleMesher.cpp
gdnative/lib/src/Meshers/Slicer/: BetterSlicer.cpp  BetterSlicer.hpp  Slicer.cpp  Slicer.hpp
gdnative/lib/src/Meshing/: IMesher.cpp  MeshBuilder.cpp  VerticesReducer.cpp
gdnative/lib/src/Meshing/Implementations/: GreedyMesher.cpp  GreedyMesher.hpp  MarchingCubesMesher.cpp  MarchingCubesMesher.hpp  SimpleMesher.cpp  SimpleMesher.hpp
gdnative/lib/src/Voxel/: PlanesVoxelizer.cpp  VoxelMesh.cpp
gdnative/src/: GodotFileStream.cpp  GodotVoxelEditor.cpp  GodotVoxelOptimizer.cpp
lib/: CMakeLists.txt  Changes-Pitfalls.md  Checklist.md
lib/Test/VCore/: VConfig.hpp
lib/include/VCore/: VConfig.hpp  VCore.hpp
lib/include/VCore/Export/: ExportSettings.hpp  IExporter.hpp  SpriteStackingExporter.hpp
lib/include/VCore/Formats/: IVoxelFormat.hpp  SceneNode.hpp
lib/include/VCore/Math/: Mat4x4.hpp  Vector.hpp
lib/include/VCore/Meshing/: Color.hpp  HalfEdge.hpp  IMesher.hpp  Material.hpp  Mesh.hpp  MeshBuilder.hpp  Texture.hpp
lib/include/VCore/Meshing/Mesh/: Mesh.hpp  MeshBuilder.hpp  Surface.hpp  Vertex.hpp
lib/include/VCore/Misc/: BinaryStream.hpp  Exceptions.hpp  FileStream.hpp  fast_vector.hpp
lib/include/VCore/Voxel/: BBox.hpp  Frustum.hpp  PlanesVoxelizer.hpp  Voxel.hpp  VoxelAnimation.hpp  VoxelMesh.hpp  VoxelModel.hpp  VoxelSpace.hpp  VoxelTextureMap.hpp
lib/include/VoxelOptimizer/: VoxelOptimizer.hpp
lib/include/VoxelOptimizer/Export/: ExportSettings.hpp  IExporter.hpp  SpriteStackingExporter.hpp
lib/include/VoxelOptimizer/Formats/: IVoxelFormat.hpp  SceneNode.hpp
lib/include/VoxelOptimizer/Math/: Mat4x4.hpp  Vector.hpp
lib/include/VoxelOptimizer/Memory/: Allocator.hpp  MemoryPool.hpp  ObjectPool.hpp
lib/include/VoxelOptimizer/Meshing/: Color.hpp  IMesher.hpp  Material.hpp  Mesh.hpp  MeshBuilder.hpp  Texture.hpp  VerticesReducer.hpp
lib/include/VoxelOptimizer/Misc/: BinaryStream.hpp  Exceptions.hpp
lib/include/VoxelOptimizer/Voxel/: BBox.hpp  Frustum.hpp  Octree.hpp  PlanesVoxelizer.hpp  Voxel.hpp  VoxelMesh.hpp  VoxelSpace.hpp  VoxelTextureMap.hpp
lib/src/: FileUtils.hpp  Texture.cpp
lib/src/Export/: IExporter.cpp
lib/src/Export/Implementations/: GLTFExporter.hpp  GodotSceneExporter.cpp  GodotSceneExporter.hpp  PLYExporter.cpp  PLYExporter.hpp  SpriteStackingExporter.cpp  SpriteStackingExporter.hpp  WavefrontObjExporter.cpp  WavefrontObjExporter.hpp
lib/src/Export/Implementations/FBX/: FBXExporter.cpp  FBXNodes.hpp
lib/src/Export/Implementations/fbx/: FbxExporter.cpp  FbxExporter.hpp
lib/src/Export/Implementations/glTF/: GLTFExporter.cpp  GLTFExporter.hpp  Nodes.hpp
lib/src/Formats/: IVoxelFormat.cpp
lib/src/Formats/Implementations/: GoxelFormat.cpp  GoxelFormat.hpp  Kenshape.hpp  KenshapeFormat.cpp  KenshapeFormat.hpp  MagicaVoxelFormat.cpp  MagicaVoxelFormat.hpp  VEditFormat.cpp
lib/src/Formats/Implementations/Qubicle/: QubicleBinaryFormat.cpp  QubicleBinaryFormat.hpp  QubicleBinaryTreeFormat.cpp  QubicleBinaryTreeFormat.hpp  QubicleExchangeFormat.cpp  QubicleExchangeFormat.hpp  QubicleFormat.cpp  QubicleFormat.hpp
lib/src/Meshing/: FaceMask.cpp  FaceMask.hpp  HalfEdge.cpp  IMesher.cpp  MeshBuilder.cpp  VerticesReducer.cpp
lib/src/Meshing/Implementations/: FloodMesher.cpp  FloodMesher.hpp  GreedyChunkedMesher.cpp  GreedyChunkedMesher.hpp  GreedyMesher.cpp  GreedyMesher.hpp  MarchingCubesMesher.cpp  MarchingCubesMesher.hpp  SimpleMesher.cpp  SimpleMesher.hpp
lib/src/Meshing/Implementations/Slicer/: Slicer.cpp  Slicer.hpp  (+2 more)
lib/src/Misc/: FileStream.cpp  Helper.hpp  TexturePacker.cpp  TexturePacker.hpp
lib/src/Voxel/: PlanesVoxelizer.cpp  TOctree.hpp  VoxelAnimation.cpp  VoxelMesh.cpp  VoxelModel.cpp  VoxelSpace.cpp  VoxelTextureMap.cpp
(+31 files in other folders)
